examples/type-error/11.j
/* Test the following:
 *  - type error when return argument type does not match with declare method return type.
 **/

class Another_Main {
    Void main(Void void_fml, String sTR) {
        Surface sur;
        println(null);
    }

}

class Surface {
    Bool needToTransform;
    Void transform() {
        Surface s;
        Int i;
        Void v;
        s = contain(v);

        while (((((!needToTransform))))) {
            return;
        }
    }

    Surface contain(Void nothing) {
        return this;
    }

    Void replace(Surface another) {
        String a;
        a = null;
        return a;
    }
}
